--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="calendar-container">
-        <h1>Выберите диапазон дат, lieber User</h1>
+        <h1>Выберите диапазон дат, lieber User git test</h1>
         <input type="text" id="dateRangePicker" placeholder="Выберите диапазон дат">
         <button onclick="submitDateRange()">Отправить диапазон дат</button>
     </div>
